[package]
name = "leetcode"
version = "0.1.1"
edition = "2021"
default-run = "leetcode"

[dependencies]
anyhow = "1"
arboard = "3"
async-trait = "0.1"
base64 = "0.22"
dirs = "5"
eframe = "0.29"
egui = "0.29"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
qrcode = "0.14"
regex = "1"
futures-util = "0.3"
hmac = "0.12"
rmcp = { version = "2.2", default-features = false, features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest", "reqwest"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls", "socks", "stream"] }
reqwest_mcp = { package = "reqwest", version = "0.13", default-features = false, features = ["json", "stream", "rustls", "socks"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "sync", "io-util", "time"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
